apps/youtrack/service.yml
apiVersion: v1
kind: Service
metadata:
  name: youtrack
  namespace: youtrack
spec:
  selector:
    app: youtrack
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
