apps/youtrack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtrack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - youtrack.starsystem.dev
      secretName: youtrack-tls
  rules:
    - host: youtrack.starsystem.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtrack
                port:
                  number: 8080
